Bug 76504 - [PATCH] fix quadrilateral coordinate assignment
Summary: [PATCH] fix quadrilateral coordinate assignment
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: glib frontend (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-23 11:20 UTC by Thomas Liebetraut
Modified: 2014-03-30 10:27 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch to fix the typo (529 bytes, patch)
2014-03-23 11:20 UTC, Thomas Liebetraut
Details | Splinter Review

Description Thomas Liebetraut 2014-03-23 11:20:23 UTC
Created attachment 96235 [details] [review]
Patch to fix the typo

There is a typo in create_poppler_quads_from_annot_quads() that causes the wrong coordinates to be used for the first point in a PopplerQuadrilateral.
Comment 1 Carlos Garcia Campos 2014-03-30 10:27:29 UTC
Good catch!, Pushed to git master, thank you


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.