glib: Fix the first coord of the qudrilateral in create_poppler_quads_from_annot_quads()

https://bugs.freedesktop.org/show_bug.cgi?id=76504